--- a/disclaimer.html
+++ b/disclaimer.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Finorator - About Us</title>
+        <title>Finorator - Contact Us</title>
         <!-- Bootstrap core CSS -->
         <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
         <!-- Custom styles for this template -->
@@ -73,7 +73,7 @@
                         </div>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link active" href="about-us.html" id="dropdown01" aria-haspopup="true" aria-expanded="false">About Us</a>
+                        <a class="nav-link" href="about-us.html" id="dropdown01" aria-haspopup="true" aria-expanded="false">About Us</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link" href="partner.html" id="dropdown01" aria-haspopup="true" aria-expanded="false">Become a Partner</a>
@@ -97,159 +97,115 @@
                 <div class="row" style="align-items: center;">
                     <div class="col-lg-12 col-xl-12">
                         <div>
-                            <h1 class="theme-h1 text-center">
-About Finorator</h1>
+                            <h1 class="theme-h1 text-center">Disclaimer</h1>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="section-body about-u">
-            <div class="container">
-                <div class="row">
-                    <div class="vision-card col-xl-5 col-lg-5">
-                        <div class="theme-head text-left">Our Vision</div>
-                        <div class="description text-left">Financial freedom for everyone
-</div>
-                    </div>
-                    <div class="vision-card col-xl-5 col-lg-5">
-                        <div class="theme-head text-left">Our Mission</div>
-                        <div class="description text-left">To act as a single leading platform comprehensive to all financial needs and applications for all arrays of users, eradicating the utility of different and separate financial platforms.
-</div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="section-body">
             <div class="container">
-                <div class="theme-head">
-                    Who we are ?                     
+                <style type="text/css">
+    p.p1 {
+        margin: 0.0px 0.0px 13.5px 0.0px;
+        text-align: center;
+        font: 27.0px Helvetica;
+        color: #3f6caf;
+        background-color: #ffffff
+    }
 
-                    <div class="description text-left">Our Team of CA Spartan have made FINORATOR a unified platform tailored to help you accomplish your financial goals & helps you to manage all financial operations under one platform also as to add financial freedom into your life
-</div>
-                </div>
-                <div class="row">
-                    <div class="team-card col-xl-3 col-lg-4">
-                        <img src="assets/person.jpeg">
-                        <h3>K. APOORV</h3>
-                        <p>Founder</p>
-                    </div>
-                    <div class="team-card col-xl-3 col-lg-4">
-                        <img src="assets/person.jpeg">
-                        <h3>S. Agrawal<br><span style="font-size: 16px;">(Chartered Accountant)</span></h3>
-                        <p>Founder</p>
-                    </div>
-                    <div class="team-card col-xl-3 col-lg-4">
-                        <img src="assets/person.jpeg">
-                        <h3>Ayush Agrawal<br><span style="font-size: 16px;">(Chartered Accountant)</span></h3>
-                        <p>Team Member -
-Product Development & Operational Manager</p>
-                    </div>
-                    <div class="team-card col-xl-3 col-lg-4">
-                        <img src="assets/person.jpeg">
-                        <h3>Dikshita Agrawal<br><span style="font-size: 16px;">(Company Secretary)</span></h3>
-                        <p>Team member -
-Operations  & Channel Partner  Development</p>
-                    </div>
-                    <div class="team-card col-xl-3 col-lg-4">
-                        <img src="assets/person.jpeg">
-                        <h3>Miss Anjali Patel</h3>
-                        <p>Team member - 
-Corporate Consultant & Human Resource Manager ( HR)</p>
-                    </div>
-                    <div class="team-card col-xl-3 col-lg-4">
-                        <img src="assets/person.jpeg">
-                        <h3>Mr. Indra Pratap Singh</h3>
-                        <p>Team Member 
-Technical Support, Marketing & Sales Manager</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="section-body features">
-            <div class="container">
-                <div class="theme-head text-center">Why choose Finorator</div>
-                <div class="row mb-5">
-                    <div class="col-xl-4 col-lg-4 col-sm-6">
-                        <div class="feature-bigcard">
-                            <img src="assets/main-feature1.svg">
-                            <div class="description">To be a Financially Literate person and increase your knowledge bank gaining financial wisdom</div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-sm-6">
-                        <div class="feature-bigcard">
-                            <img src="assets/main-feature2.svg">
-                            <div class="description">To spend less time and money on otherwise financial applications of different financial sectors</div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-sm-12">
-                        <div class="feature-bigcard">
-                            <img src="assets/main-feature3.svg">
-                            <div class="description">To get simplified Financial Advisory and Customer Support escaping complex decisions and digital frauds</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row mt-5 pt-5">
-                    <div class="col-xl-3 col-lg-3 col-sm-6">
-                        <div class="text-center feature-smallcard">
-                            <img src="assets/side-feature1.svg">
-                            <div class="title">Zero-cost Doorstep Consultancy</div>
-                            <div class="description">Get a no-cost financial advisory and customer support at your doorstep with no hidden or surplus charges on products & services
-</div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-lg-3 col-sm-6">
-                        <div class="text-center feature-smallcard">
-                            <img src="assets/side-feature2.svg">
-                            <div class="title">Absolute 
-                                <br>Transparency
-                            </div>
-                            <div class="description">Get insights on pricing, a detailed comparison of different segments, and increase your financial awareness by filtering products as per your need.
-</div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-lg-3 col-sm-6">
-                        <div class="text-center feature-smallcard">
-                            <img src="assets/side-feature3.svg">
-                            <div class="title">Effortless
-                                <br> Universal KYC
-                            </div>
-                            <div class="description">Tired of registering everywhere for KYC? With Finorator, you need to register digitally only once for all your financial uses and applications.
-</div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-lg-3 col-sm-6">
-                        <div class="text-center feature-smallcard">
-                            <img src="assets/side-feature4.svg">
-                            <div class="title">Integrated Financial solutions and uses</div>
-                            <div class="description">No need to jump between different applications for different purposes. Using Finorator, you can integrate data of investments, banking, loans, mutual funds, tax filing and more for all financial operations inside one single application.</div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-sm-6"> 
-                        <div class="text-center feature-smallcard">
-                            <img src="assets/feature-5.svg">
-                            <div class="title">Pay Once for One Segment</div>
-                            <div class="description">You don’t need to pay multiple times to avail different services under each segment and sub-segments. With Finorator, you only pay once to gain access to a range of products & services under each segment or sub-segment.</div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-sm-6">
-                        <div class="text-center feature-smallcard">
-                            <img src="assets/feature-6.svg">
-                            <div class="title">Complete Privacy</div>
-                            <div class="description">Worried about your personal and transactional details? You don’t need
-                                to! Finorator provides absolute privacy with user-friendly cloud storage support for all your important document uploads.
-</div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-sm-12">
-                        <div class="text-center feature-smallcard">
-                            <img src="assets/feature-7.svg">
-                            <div class="title">Refer products and Win Cash Rewards</div>
-                            <div class="description">Avail cash rewards and cashback for each product referral you make to your friends, family, and colleagues.
-</div>
-                        </div>
-                    </div>
-                </div>
+    p.p2 {
+        margin: 0.0px 0.0px 15.0px 0.0px;
+        font: 10.5px Helvetica;
+        color: #535353;
+        background-color: #ffffff;
+        min-height: 12.0px
+    }
+
+    p.p3 {
+        margin: 0.0px 0.0px 15.0px 0.0px;
+        font: 10.5px Helvetica;
+        color: #535353;
+        background-color: #ffffff
+    }
+
+    p.p4 {
+        margin: 0.0px 0.0px 13.5px 0.0px;
+        font: 10.5px 'Times New Roman';
+        color: #535353;
+        background-color: #ffffff
+    }
+
+    li.li5 {
+        margin: 0.0px 0.0px 5.0px 0.0px;
+        font: 10.5px Helvetica;
+        color: #535353
+    }
+
+    span.s1 {
+        text-decoration: underline
+    }
+
+    span.s2 {
+        font: 10.0px Symbol
+    }
+
+    span.s3 {
+        background-color: #ffffff
+    }
+
+    ul.ul1 {
+        list-style-type: disc
+    }
+</style>
+                <style type="text/css">
+    p.p1 {
+        margin: 0.0px 0.0px 13.5px 0.0px;
+        font: 10.5px Helvetica;
+        color: #535353;
+        background-color: #ffffff
+    }
+
+    p.p2 {
+        margin: 0.0px 0.0px 15.0px 0.0px;
+        font: 10.5px Helvetica;
+        color: #535353;
+        background-color: #ffffff
+    }
+
+    p.p3 {
+        margin: 0.0px 0.0px 15.0px 0.0px;
+        text-align: justify;
+        font: 10.5px Helvetica;
+        color: #535353;
+        background-color: #ffffff
+    }
+
+    p.p4 {
+        margin: 0.0px 0.0px 13.5px 0.0px;
+        font: 12.0px 'Times New Roman';
+        color: #535353;
+        background-color: #ffffff
+    }
+
+    span.s1 {
+        text-decoration: underline;
+        color: #0000ff
+    }
+
+    span.s2 {
+        font: 12.0px Arial
+    }
+</style>
+                <p class="p1"><span style="font-size: 16px;">Please read these Disclaimers (hereinafter referred to as &quot;Terms&quot;) carefully. Please refer to the official Website for more information (hereinafter referred to as &quot;FINORATOR&quot;) - <a href="https://finorator.com"><span class="s1"><strong>https://finorator.com</strong></span></a></span></p>
+                <p class="p2"><span style="font-size: 16px;">All the information on this website - https://finorator.com/ - is published in good faith and for general information purpose only. Finorator.com does not make any warranties about the completeness, reliability and accuracy of this information. By accessing this Website and / or using any information/contents provided on or via this Website, you represent that you have read and understood these Terms and you agree to be bound by and comply with the same. Furthermore, by using this Website, you represent that (i) you have the capacity to be bound by these Terms and (ii) if you are acting on behalf of any company or other person/entity, you have the authority to bind such company or person/entity. If you do not agree to these Terms, please do not use this Website or download any content, in any manner whatsoever, from<span class="s2">&nbsp;the same.</span> Any action you take upon the information you find on this website (finorator.com), is strictly at your own risk. Finorator.com will not be liable for any losses and/or damages in connection with the use of our website.</span></p>
+                <p class="p3"><span style="font-size: 16px;">Neither FINORATOR nor any of its affiliates, their directors, employees and agents accept any responsibility and/or liability or warrant or guarantee the performance or profitability of the Products/Services nor do they warrant or guarantee the returns and that the product purchase objectives of the Products/Services shall be achieved at any time and in any manner whatsoever. We make no representations and/or warranties and/or guarantees, express or implied, regarding the accuracy, completeness or reliability of any information/contents, Software, Features, Products/Services provided in this Website. Without limiting any of the foregoing,&nbsp;FINORATOR, its affiliates, associates, their directors, employees and agents expressly disclaim any and all liability or responsibility, in any manner whatsoever, for any damages or expenses/costs/losses (including litigation expenses) incurred by the Investors or any other person/entity, arising out of or related to the information/contents of this Website or its Software and/or for any damages that may be caused to any equipment / hardware and/or other software or components thereof, due to any viruses, defects or malfunctions in connection with access or use of this Website and/or any information/contents transmitted via this Website and/or the functioning/non-availability of this Website or any part thereof, at any time and in any manner whatsoever and/or any action or decision made by the Investors in reliance on the Website and/or its information/contents, Software, Features and/or any unauthorized use or your inability to use or reproduction of the Website in any manner whatsoever or any of its information/contents and/or the Terms of Offer or any investments in the Products/Services, including any and all direct, special, punitive, indirect, notional or consequential damages (including lost profits) arising from or in connection with the above, even if notified of the possibility of such damages.</span></p>
+                <p class="p2"><span style="font-size: 16px;">From our website, you can visit other websites by following hyperlinks to such external sites. While we strive to provide only quality links to useful and ethical websites, we have no control over the content and nature of these sites. These links to other websites do not imply a recommendation for all the content found on these sites. Site owners and content may change without notice and may occur before we have the opportunity to remove a link which may have gone &apos;bad&apos;.</span></p>
+                <p class="p2"><span style="font-size: 16px;">Please be also aware that when you leave our website, other sites may have different privacy policies and terms which are beyond our control. Please be sure to check the Privacy Policies of these sites as well as their &quot;Terms of Service&quot; before engaging in any business or uploading any information.</span></p>
+                <p class="p4"><span style="font-size: 16px;">Consent</span></p>
+                <p class="p2"><span style="font-size: 16px;">By using our website, you hereby consent to our disclaimer and agree to its terms.</span></p>
+                <p class="p4"><span style="font-size: 16px;">Update</span></p>
+                <p class="p2"><span style="font-size: 16px;">Should we update, amend or make any changes to this document, those changes will be prominently posted here.</span></p>
             </div>
         </div>
         <div class="section-body footer">
