--- a/partner.html
+++ b/partner.html
@@ -76,7 +76,7 @@
                         <a class="nav-link" href="about-us.html" id="dropdown01" aria-haspopup="true" aria-expanded="false">About Us</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="partner.html" id="dropdown01" aria-haspopup="true" aria-expanded="false">Become a Partner</a>
+                        <a class="nav-link active" href="partner.html" id="dropdown01" aria-haspopup="true" aria-expanded="false">Become a Partner</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Resources</a>
@@ -253,9 +253,13 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
                     <div class="col-xl-4 offset-xl-1 col-lg-4">
                         <ul class="list-group footer-nav"> 
                             <li class="list-group-item">About Us</li>                             
-                            <li class="list-group-item">FAQs</li>                             
-                            <li class="list-group-item">Terms & Conditions</li>                             
-                            <li class="list-group-item">Privacy Policy</li>                             
+                            <li class="list-group-item">Disclaimer</li>                             
+                            <li class="list-group-item">
+                                <a href="terms-and-condition.html">Terms &amp; Conditions</a>
+                            </li>                             
+                            <li class="list-group-item">
+                                <a href="privacy-policy.html">Privacy Policy</a>
+                            </li>                             
                         </ul>
                     </div>
                     <div class="col-xl-4 col-lg-5">
