--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Finorator - About Us</title>
+        <title>Finorator - Contact Us</title>
         <!-- Bootstrap core CSS -->
         <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
         <!-- Custom styles for this template -->
@@ -73,7 +73,7 @@
                         </div>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link active" href="about-us.html" id="dropdown01" aria-haspopup="true" aria-expanded="false">About Us</a>
+                        <a class="nav-link" href="about-us.html" id="dropdown01" aria-haspopup="true" aria-expanded="false">About Us</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link" href="partner.html" id="dropdown01" aria-haspopup="true" aria-expanded="false">Become a Partner</a>
@@ -97,159 +97,42 @@
                 <div class="row" style="align-items: center;">
                     <div class="col-lg-12 col-xl-12">
                         <div>
-                            <h1 class="theme-h1 text-center">
-About Finorator</h1>
+                            <h1 class="theme-h1 text-center">Privacy Policy</h1>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="section-body about-u">
-            <div class="container">
-                <div class="row">
-                    <div class="vision-card col-xl-5 col-lg-5">
-                        <div class="theme-head text-left">Our Vision</div>
-                        <div class="description text-left">Financial freedom for everyone
-</div>
-                    </div>
-                    <div class="vision-card col-xl-5 col-lg-5">
-                        <div class="theme-head text-left">Our Mission</div>
-                        <div class="description text-left">To act as a single leading platform comprehensive to all financial needs and applications for all arrays of users, eradicating the utility of different and separate financial platforms.
-</div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="section-body">
             <div class="container">
-                <div class="theme-head">
-                    Who we are ?                     
-
-                    <div class="description text-left">Our Team of CA Spartan have made FINORATOR a unified platform tailored to help you accomplish your financial goals & helps you to manage all financial operations under one platform also as to add financial freedom into your life
-</div>
-                </div>
-                <div class="row">
-                    <div class="team-card col-xl-3 col-lg-4">
-                        <img src="assets/person.jpeg">
-                        <h3>K. APOORV</h3>
-                        <p>Founder</p>
-                    </div>
-                    <div class="team-card col-xl-3 col-lg-4">
-                        <img src="assets/person.jpeg">
-                        <h3>S. Agrawal<br><span style="font-size: 16px;">(Chartered Accountant)</span></h3>
-                        <p>Founder</p>
-                    </div>
-                    <div class="team-card col-xl-3 col-lg-4">
-                        <img src="assets/person.jpeg">
-                        <h3>Ayush Agrawal<br><span style="font-size: 16px;">(Chartered Accountant)</span></h3>
-                        <p>Team Member -
-Product Development & Operational Manager</p>
-                    </div>
-                    <div class="team-card col-xl-3 col-lg-4">
-                        <img src="assets/person.jpeg">
-                        <h3>Dikshita Agrawal<br><span style="font-size: 16px;">(Company Secretary)</span></h3>
-                        <p>Team member -
-Operations  & Channel Partner  Development</p>
-                    </div>
-                    <div class="team-card col-xl-3 col-lg-4">
-                        <img src="assets/person.jpeg">
-                        <h3>Miss Anjali Patel</h3>
-                        <p>Team member - 
-Corporate Consultant & Human Resource Manager ( HR)</p>
-                    </div>
-                    <div class="team-card col-xl-3 col-lg-4">
-                        <img src="assets/person.jpeg">
-                        <h3>Mr. Indra Pratap Singh</h3>
-                        <p>Team Member 
-Technical Support, Marketing & Sales Manager</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="section-body features">
-            <div class="container">
-                <div class="theme-head text-center">Why choose Finorator</div>
-                <div class="row mb-5">
-                    <div class="col-xl-4 col-lg-4 col-sm-6">
-                        <div class="feature-bigcard">
-                            <img src="assets/main-feature1.svg">
-                            <div class="description">To be a Financially Literate person and increase your knowledge bank gaining financial wisdom</div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-sm-6">
-                        <div class="feature-bigcard">
-                            <img src="assets/main-feature2.svg">
-                            <div class="description">To spend less time and money on otherwise financial applications of different financial sectors</div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-sm-12">
-                        <div class="feature-bigcard">
-                            <img src="assets/main-feature3.svg">
-                            <div class="description">To get simplified Financial Advisory and Customer Support escaping complex decisions and digital frauds</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row mt-5 pt-5">
-                    <div class="col-xl-3 col-lg-3 col-sm-6">
-                        <div class="text-center feature-smallcard">
-                            <img src="assets/side-feature1.svg">
-                            <div class="title">Zero-cost Doorstep Consultancy</div>
-                            <div class="description">Get a no-cost financial advisory and customer support at your doorstep with no hidden or surplus charges on products & services
-</div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-lg-3 col-sm-6">
-                        <div class="text-center feature-smallcard">
-                            <img src="assets/side-feature2.svg">
-                            <div class="title">Absolute 
-                                <br>Transparency
-                            </div>
-                            <div class="description">Get insights on pricing, a detailed comparison of different segments, and increase your financial awareness by filtering products as per your need.
-</div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-lg-3 col-sm-6">
-                        <div class="text-center feature-smallcard">
-                            <img src="assets/side-feature3.svg">
-                            <div class="title">Effortless
-                                <br> Universal KYC
-                            </div>
-                            <div class="description">Tired of registering everywhere for KYC? With Finorator, you need to register digitally only once for all your financial uses and applications.
-</div>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-lg-3 col-sm-6">
-                        <div class="text-center feature-smallcard">
-                            <img src="assets/side-feature4.svg">
-                            <div class="title">Integrated Financial solutions and uses</div>
-                            <div class="description">No need to jump between different applications for different purposes. Using Finorator, you can integrate data of investments, banking, loans, mutual funds, tax filing and more for all financial operations inside one single application.</div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-sm-6"> 
-                        <div class="text-center feature-smallcard">
-                            <img src="assets/feature-5.svg">
-                            <div class="title">Pay Once for One Segment</div>
-                            <div class="description">You don’t need to pay multiple times to avail different services under each segment and sub-segments. With Finorator, you only pay once to gain access to a range of products & services under each segment or sub-segment.</div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-sm-6">
-                        <div class="text-center feature-smallcard">
-                            <img src="assets/feature-6.svg">
-                            <div class="title">Complete Privacy</div>
-                            <div class="description">Worried about your personal and transactional details? You don’t need
-                                to! Finorator provides absolute privacy with user-friendly cloud storage support for all your important document uploads.
-</div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-sm-12">
-                        <div class="text-center feature-smallcard">
-                            <img src="assets/feature-7.svg">
-                            <div class="title">Refer products and Win Cash Rewards</div>
-                            <div class="description">Avail cash rewards and cashback for each product referral you make to your friends, family, and colleagues.
-</div>
-                        </div>
-                    </div>
-                </div>
+                <p class="partner-section">At finorator.com, accessible from https://finorator.com/, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by finorator.com and how we use it. One Stop Global Financial Services. ("Finorator", "us", "we", "our") recognizes that its visitors and Users, want to know how we safeguard and keep up the privacy. <br></p>
+                <p class="partner-section">This Privacy Policy does not apply to the practices of companies that we do not own or control, or to individuals whom we do not employ or manage, including any of the third parties to which we may disclose user information as set forth in this Privacy Policy. <br></p>
+                <p class="partner-section"><b>BY ACCESSING OR USING THE WEBSITE/APPLICATION, USER UNCONDITIONALLY ACCEPT AND AGREE WITHOUT LIMITATION OR QUALIFICATION TO THE TERMS AND CONDITIONS OF THIS POLICY. IF YOU DO NOT AGREE WITH THE TERMS AND CONDITIONS OF THIS POLICY, PLEASE DO NOT PROCEED OR CONTINUE FURTHER TO USE THIS WEBSITE/APPLICATION.
+ANY CAPITALIZED TERMS USED HEREIN WITHOUT DEFINITION SHALL HAVE THE MEANING GIVEN TO THEM IN THE COMPANY’S TERMS&nbsp;AND CONDITIONS.</b><br></p>
+                <p class="partner-section">If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.<br><br>
+This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in finorator.com. This policy is not applicable to any information collected offline or via channels other than this website. <br><b>Consent -</b>
+By using our website, you hereby consent to our Privacy Policy and agree to its terms. <br><b>Links to Other Websites -</b>
+Our Service may contain links to other websites that are integrated to our system and are operated by us. If you click on a third party link, such as social media or blogs links. You will be directed to that third party's site. We strongly advise you to review the Privacy Policy of every site you visit. We have no control over and assume no responsibility for the content, privacy policies or practices of any third party sites or services.<br><b>Information we collect -</b>
+The personal information that you are asked to provide, and the reasons why you are asked to provide it, will be made clear to you at the point we ask you to provide your personal information.<br>
+If you contact us directly, we may receive additional information about you such as your name, email address, phone number, PAN, Addhaar Number, State ZIP or Postal Code etc. the contents of the message and/or attachments you may send us, and any other information you may choose to provide.<br>
+When you buy any product for our website, we may ask for your contact information, including items such as name, product name, address, email address, and telephone number to serve you better at the time of claims, redemption and other related query.<br><b>How we use your information -</b>
+We use the information we collect in various ways, including to:<br>Provide, operate, and maintain our website<br>Improve, personalize, and expand our website<br>
+Understand and analyze how you use our website<br>
+Develop new products, services, features, and functionality<br>
+Communicate with you, either directly or through one of our partners, including for customer service, to provide you with updates and other information relating to the website, and for marketing and promotional purposes<br>
+Send you emails<br>
+Find and prevent fraud<br><br><b>Log Files -</b>
+Finorator.com follows a standard procedure of using log files. These files log visitors when they visit websites. All hosting companies do this and a part of hosting services' analytics. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the site, tracking users' movement on the website, and gathering demographic information.<br><br><b>Advertising Partners Privacy Policies -</b>
+You may consult this list to find the Privacy Policy for each of the advertising partners of finorator.com.
+Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in their respective advertisements and links that appear on finorator.com, which are sent directly to users' browser. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on websites that you visit.
+Note that finorator.com has no access to or control over these cookies that are used by third-party advertisers.<br><br><b>Third Party Privacy Policies -</b>
+Finorator.com Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may include their practices and instructions about how to opt-out of certain options.
+You can choose to disable cookies through your individual browser options. To know more detailed information about cookie management with specific web browsers, it can be found at the browsers' respective websites.<br><br><b>Children's Information -</b>
+Another part of our priority is adding protection for children while using the internet. We encourage parents and guardians to observe, participate in, and/or monitor and guide their online activity.
+Finorator.com does not knowingly collect any Personal Identifiable Information from children under the age of 18. If you think that your child provided this kind of information on our website, we strongly say we are not responsible for any of this. 
+Change in privacy policy?
+We may need to change this policy and our notices. The updates will be posted online. If the changes are substantive, we will announce the update through Finorator.com.<br><br><b>Contacting us -</b>
+For questions related to updating or changing your any information or any other Information provided by you and for your valuable feedback regarding this Privacy Policy, please send e-mail to&nbsp;support@finorator.com   <br></p>
             </div>
         </div>
         <div class="section-body footer">
