--- a/contact-us.html
+++ b/contact-us.html
@@ -160,9 +160,13 @@
                     <div class="col-xl-4 offset-xl-1 col-lg-4">
                         <ul class="list-group footer-nav"> 
                             <li class="list-group-item">About Us</li>                             
-                            <li class="list-group-item">FAQs</li>                             
-                            <li class="list-group-item">Terms & Conditions</li>                             
-                            <li class="list-group-item">Privacy Policy</li>                             
+                            <li class="list-group-item">Disclaimer</li>                             
+                            <li class="list-group-item">
+                                <a href="terms-and-condition.html">Terms &amp; Conditions</a>
+                            </li>                             
+                            <li class="list-group-item">
+                                <a href="privacy-policy.html">Privacy Policy</a>
+                            </li>                             
                         </ul>
                     </div>
                     <div class="col-xl-4 col-lg-5">
